[project]
name = "styleflow-content-fixed-i2i"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"


dependencies = [
    "opencv-python>=4.5.3.56",
    "pyyaml>=6.0.2",
    "scikit-image>=0.19.3",
    "scipy>=1.8.1",
    "tensorboard>=2.0.0",
    "tensorboardx>=2.6.2.2",
    # "tensorboard==2.0.0",
    # "tensorboardx>=2.6.2.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]
